initialize current design

--- a/about/index.html
+++ b/about/index.html
@@ -1,196 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Grace Mission International | Germany :: Grace Mission International</title>
-<meta name="Description" content="Grace Mission International is based in Colindale, Mill Hill, Hendon, Barnet, Finchley, Borehamwood and the Borough of Barnet, London." />
-<meta name="Keywords" content="trinity, northwest, north, west, church, london, colindale, mill hill, hendon, barnet, finchley, borehamwood, new frontiers" />
-<!-- <link rel="canonical" href="http://localhost/g-mission/" /> -->
-<link href="css/style-new.css" rel="stylesheet" type="text/css" />
+<html lang="en-US">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>About Grace Mission | Eisenberg </title>
+		<meta name="Description" content="Grace Mission International is based in Colindale, Mill Hill, Hendon, Barnet, Borehamwood and the borough of Barnet, London." />
+		<meta name="Keywords" content="trinity, northwest, north, west, church, london, colindale, mill hill, hendon, barnet, borehamwood, new frontiers" />
+		<link href="http://localhost/g-mission/css/style-new.css" rel="stylesheet" type="text/css" />
 
-<style>
-.sidebar.archive a.subscribe-block {
-width:auto;
-padding:30px;
-display:block;
-background-color:#03a2ac;
-color:#fff;
-margin-top:50px;
-background-image: url(http://localhost/g-mission/images2016/podcast-icon-hover.png);
-background-repeat:no-repeat;
-background-position:top right;
-}
-.sidebar.archive a.subscribe-block:hover {
-background-color:#ffc600;
-color:#444;
-background-image: url(http://localhost/g-mission/images2016/podcast-icon.png);
-}
-.sidebar.archive a.subscribe-block h4 {
-margin-top:0;
-margin-bottom:0;
-border:none;
-font-weight:700;
-}
-.sidebar.archive a.subscribe-block h5 {
-margin-top:0;
-margin-bottom:0;
-}
-</style>
-<style>
-.more-events {
-text-align:center;
-display:block;
-color:#03a2ac;
-text-decoration:none;
-font-size:15px;
-padding-top:10px;
-}
-.more-events:hover {text-decoration:underline;}
-</style>
-<script>
-$(window).resize(function(){
-  if ($(window).width() < 850) {
-        $(".nav ul").removeAttr("height","auto");
-        $(".nav ul").removeAttr("padding","0");
-		} else {$(".nav ul").removeAttr("style");
-  }
-});
-</script>
-
-
-<style>
-	
-@media (max-width: 1500px) {
-.collage-bunch3 {
-	width:33%;
-	float:right;
-}
-#sermons-block {
-	width:100%;
-	float:right;
-}
-#about-block {
-	width:100%;
-	height:500px;
-}
-}
-@media (max-width: 1100px) {
-.collage-bunch3 {
-	width:50%;
-	float:left;
-}
-#sermons-block {
-	width:100%;
-	float:right;
-}
-#about-block {
-	width:100%;
-	height:350px;
-}
-}
-@media (max-width: 780px) {
-.collage-bunch3 {
-	width:100%;
-	float:left;
-}
-#sermons-block {
-	width:100%;
-	float:right;
-}
-#about-block {
-	width:100%;
-	height:350px;
-}
-}
-@media (max-width: 520px) {
-#about-block {height:280px;}
-}
-@media (max-width: 400px) {
-#about-block {height:230px;}
-}
-		#more-events-block {display:block;}
-		#promo-block350 {
-			background-size:cover;
-			background-repeat:no-repeat;
-			background-position:center;
-			color:#ffffff;
-			background-image:url(http://localhost/g-mission/images-2016/uploads/catalyst-festival-2018-homepage2.jpg);
-		}
-		#promo-block350:hover {
-			color:#fff;
-			background:none;
-			background-color:#03a2ac;
-		}
-		
-	</style><style>
-	
-@media (max-width: 1500px) {
-.collage-bunch3 {
-	width:33%;
-	float:right;
-}
-#sermons-block {
-	width:100%;
-	float:right;
-}
-#about-block {
-	width:100%;
-	height:500px;
-}
-}
-@media (max-width: 1100px) {
-.collage-bunch3 {
-	width:50%;
-	float:left;
-}
-#sermons-block {
-	width:100%;
-	float:right;
-}
-#about-block {
-	width:100%;
-	height:350px;
-}
-}
-@media (max-width: 780px) {
-.collage-bunch3 {
-	width:100%;
-	float:left;
-}
-#sermons-block {
-	width:100%;
-	float:right;
-}
-#about-block {
-	width:100%;
-	height:350px;
-}
-}
-@media (max-width: 520px) {
-#about-block {height:280px;}
-}
-@media (max-width: 400px) {
-#about-block {height:230px;}
-}
-		#more-events-block {display:block;}
-		#promo-block345 {
-			background-size:cover;
-			background-repeat:no-repeat;
-			background-position:center;
-			color:#fff;
-			background-image:url(http://localhost/g-mission/images-2016/uploads/aarons-video-image1.jpg);
-		}
-		#promo-block345:hover {
-			color:#fff;
-			background:none;
-			background-color:#03a2ac;
-		}
-		
+	<style>
+	.sidebar.archive a.subscribe-block {
+	width:auto;
+	padding:30px;
+	display:block;
+	background-color:#03a2ac;
+	color:#fff;
+	margin-top:50px;
+	background-image: url(http://localhost/g-mission/images2016/podcast-icon-hover.png);
+	background-repeat:no-repeat;
+	background-position:top right;
+	}
+	.sidebar.archive a.subscribe-block:hover {
+	background-color:#ffc600;
+	color:#444;
+	background-image: url(http://localhost/g-mission/images2016/podcast-icon.png);
+	}
+	.sidebar.archive a.subscribe-block h4 {
+	margin-top:0;
+	margin-bottom:0;
+	border:none;
+	font-weight:700;
+	}
+	.sidebar.archive a.subscribe-block h5 {
+	margin-top:0;
+	margin-bottom:0;
+	}
 	</style>
 
 <!-- Type Kit -->
-<!-- <link rel="stylesheet" href="https://use.typekit.net/ijy4hdj.css"> -->
 <script src="https://use.typekit.net/ijy4hdj.js"></script>
 	<script>try{Typekit.load({ async: true });}catch(e){}</script>
 
@@ -208,6 +55,7 @@ $(window).resize(function(){
 
 	</script>
 </head>
+
 
 <body>
 <div class="nav-hold">
@@ -235,91 +83,60 @@ $(window).resize(function(){
 	<div class="spacer" id="spacer-line"></div>
 </div>
 
-
-
-<div class="title-block title-block-home" style="background-image:url(http://localhost/g-mission/images-2016/uploads/church-congregation.jpg);">
+<div class="title-block title-block2" style="background-image:url(http://localhost/g-mission/images2016/titles/about-trinity.jpg); background-position:bottom left;">
 	<div class="title-block-color">
-		<div class="title-heading title-heading-home">
-			<h1>Welcome to Grace<br/> Mission International</h1>
-			<h2>A Family of God's children spreading the goodnews</h2>
-			<a class="title-link block-link" href="http://localhost/g-mission/sundays">Sundays 11.00am</a>
+		<div class="title-heading">
+			<h1>About Us</h1>
+			<h2>Grace Mission International London</h2>
 		</div>
 	</div>
 </div>
 
-
-
-
-<div class="collage-bunch1">
-	<div class="collage-block collage-block-50" id="sundays-block">
-		<a href="http://localhost/g-mission/sundays" class="hover-link">
-			<h3>Service Times</h3>
-			<p>Every Sunday 10.30am<br/>at Eisenberg</p>
-		</a>
+<div class="container">
+	<div class="content full">
+        <h2>More People Loving Jesus More</h2>
+        <p>Together we are learning to live life the way Jesus did: knowing the Father loves us, empowered by the Holy Spirit, caring for each other, celebrating creativity, being adventurous in our faith, reaching out to those around, living honestly and devoted to God our Father.</p>
+		<p>Grace Mission International London is Christian church which has grown to be a diverse community of people from all different ages, stages and walks of life.</p>
 	</div>
-	<div class="collage-block collage-block-50" id="expect-block">
-		<a href="http://localhost/g-mission/sundays/what-to-expect" class="hover-link">
-			<h3>New here?</h3>
-			<p>FAQs about our meetings</p>
-		</a>
-	</div>
-		<a href="http://localhost/g-mission/testimony" class="collage-block collage-block-100" id="promo-block345">
-			<h2>Share your testimony</h2>
-			<h4>And we overcame by the blood of the Lamb and by the words of our</h4>
-			<p>T E S T I M O N Y</p>
-		</a>
-	</div> 
+	<div class="spacer"></div>
 </div>
-
-
-<div class="collage-bunch2">
-	<div class="collage-block collage-block-100b" id="giving-block">
-		<a href="http://localhost/g-mission/about/giving" class="hover-link">
-			<h3>Giving</h3>
-			<p>Redeem your pledges and donations</p>
-		</a>
-	</div>
-
-	<div class="collage-block collage-block-100b" id="about-block">
-		<a href="http://localhost/g-mission/about" class="hover-link">
-			<h3>About Us</h3>
-			<p>Spirit-filled, friendly <br/>&amp; mission focused</p>
-		</a>
-	</div>
+	
+<div class="links-block">
+	<a href="http://localhost/g-mission/about/our-vision" class="page-links" id="vision">
+		<p>What's our purpose?</p>
+		<h3>The Vision</h3>
+	</a>
+	<a href="http://localhost/g-mission/about/leadership" class="page-links" id="leaders">
+		<p>Who leads Trinity?</p>
+		<h3>The Leaders</h3>
+	</a>
+	<a href="http://localhost/g-mission/about/what-we-believe" class="page-links" id="believe">
+		<p>What do we believe?</p>
+		<h3>Our Beliefs</h3>
+	</a>
+	<a href="http://localhost/g-mission/about/community-work" class="page-links" id="community">
+		<p>Blessed to be a blessing</p>
+		<h3>Our Community</h3>
+	</a>
+	<a href="http://localhost/g-mission/about/our-history" class="page-links" id="history">
+		<p>What's our story?</p>
+		<h3>Our History</h3>
+	</a>
+	
+	<a href="http://localhost/g-mission/connect" class="page-links" id="connect">
+		<p>GroupLife at Trinity</p>
+		<h3>Connect</h3>
+	</a>
+	<a href="http://localhost/g-mission/about/giving" class="page-links" id="giving">
+		<p>A lifestyle of generosity</p>
+		<h3>Donate</h3>
+	</a>
+	<a href="http://catalystnetwork.org" target="_blank" class="page-links" id="catalyst">
+		<p>Our network of churches</p>
+		<h3>Catalyst</h3>
+	</a>
+	<div class="spacer"></div>
 </div>
-
-<div class="collage-bunch3">
-	<div class="collage-block collage-block-100" id="sermons-block">
-		<h3>Sermons</h3>
-		
-			<p><a class="sermon-link" href="http://localhost/g-mission/sermons/listen/three-ways-the-resurrection-changes-things">Three things the Resurrection changed
-				<span><br/><strong>01.04.18</strong>&nbsp; Duncan Hanton</span>
-			</a></p>
-		
-			<p><a class="sermon-link" href="http://localhost/g-mission/sermons/listen/who-is-jesus">Who is Jesus?
-				<span><br/><strong>25.03.18</strong>&nbsp; Matt Hosier</span>
-			</a></p>
-		
-			<p><a class="sermon-link" href="http://localhost/g-mission/sermons/listen/jesus-has-designs-on-you">Jesus has designs on you
-				<span><br/><strong>18.03.18</strong>&nbsp; Pete Thomas</span>
-			</a></p>
-		
-	</div>
-<!-- 	<div class="collage-block collage-block-100b" id="about-block">
-		<a href="http://localhost/g-mission/about" class="hover-link">
-			<h3>About Us</h3>
-			<p>Spirit-filled, friendly <br/>&amp; mission focused</p>
-		</a>
-	</div>
-</div>
-<div class="collage-bunch1">
-		<a href="http://localhost/g-mission/videos" class="collage-block collage-block-100" id="promo-block345">
-			<h2>Aaron's Story</h2>
-			<h4>See How Our Debt Centre Helped</h4>
-			<p>W A T C H&nbsp; &nbsp;H E R E</p>
-		</a>
-	</div> -->
-	</div>
 <div class="spacer"></div>
 
 <div class="footer" id="contact-foot">
@@ -335,18 +152,17 @@ $(window).resize(function(){
         	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d964.3529305463612!2d-0.2404529577494383!3d51.601004889865614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x8ba81e4d0674e68c!2sTrinity+Church!5e0!3m2!1sen!2suk!4v1464089410065" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 			</div>
 			<a href="https://maps.google.com/maps?ll=51.601409,-0.238894&z=17&t=m&hl=en-US&gl=GB&mapclient=embed&cid=10063326683529012876" target="_blank">View Map</a>
-	</div>		
-	
+		</div>
 
 
-	<div class="footer-form">
-		<h3>Get In Touch</h3>
-			<p>Phone<br/>
-			020 8205 9271</p>
-				<div id="wufoo-m8uqtek0nknqn2">
-					Get in touch with our <a href="https://trinitywufoo.wufoo.com/forms/m8uqtek0nknqn2">online form</a>.
-				</div>
-			<script type="text/javascript">var m8uqtek0nknqn2;(function(d, t) {
+		<div class="footer-form">
+			<h3>Get In Touch</h3>
+				<p>Phone<br/>
+				020 8205 9271</p>
+			<div id="wufoo-m8uqtek0nknqn2">
+				Get in touch with our <a href="https://trinitywufoo.wufoo.com/forms/m8uqtek0nknqn2">online form</a>.
+			</div>
+				<script type="text/javascript">var m8uqtek0nknqn2;(function(d, t) {
 				var s = d.createElement(t), options = {
 				'userName':'trinitywufoo',
 				'formHash':'m8uqtek0nknqn2',
@@ -362,17 +178,11 @@ $(window).resize(function(){
 				try { m8uqtek0nknqn2 = new WufooForm();m8uqtek0nknqn2.initialize(options);m8uqtek0nknqn2.display(); } catch (e) 			{}};
 				var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
 				})(document, 'script');
-			</script>
+				</script>
 		</div>
 	</div>
-
-
-
 	<div class="spacer"></div>
-	<div class="container" style="margin-top:20px;">
-		<div class="footer-address"></div>	
-		<div class="footer-form" style="text-align:right; font-size:60%">website made by <a href="http://www.tecmie.com" style="color:white"><img src="https://crm.tecmie.com/uploads/company/logo.png"></a></div>
-	</div>
+	
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script>
