include tecmie copyright, update google forms and map on homepage

--- a/index.html
+++ b/index.html
@@ -288,7 +288,17 @@ $(window).resize(function(){
 	</div>
 </div>
 
-<div class="collage-bunch3">
+
+	<div class="collage-block collage-block-100" id="live-stream">
+		<a href="http://localhost/g-mission/about" class="hover-link">
+			<h3>Live Stream</h3>
+			<p>Stream Our Services Online <br/>&amp; from any location</p>
+		</a>
+		
+	</div>
+
+
+<!-- <div class="collage-bunch3">
 	<div class="collage-block collage-block-100" id="sermons-block">
 		<h3>Sermons</h3>
 		
@@ -304,7 +314,9 @@ $(window).resize(function(){
 				<span><br/><strong>18.03.18</strong>&nbsp; Pete Thomas</span>
 			</a></p>
 		
-	</div>
+	</div> -->
+
+
 <!-- 	<div class="collage-block collage-block-100b" id="about-block">
 		<a href="http://localhost/g-mission/about" class="hover-link">
 			<h3>About Us</h3>
@@ -326,43 +338,70 @@ $(window).resize(function(){
 	<div class="container">
 		<div class="footer-address">
 			<h3>Visit Us</h3>
-			<p>Grace Mission International meets every Sunday 10.30am</p>
-			<p><strong>The Centre</strong><br/>
-			Avion Crescent<br/>
-			Grahame Park Way<br/>
-			London NW9 5QY</p>
+			<p>Every Sunday Sunday 11.00am</p>
+			<p><strong>Grace Mission International</strong><br/>
+					 ALTENESSENER STR.289.45326 <br>
+						Essen Germany</p>
 			<div class="googlemap">
-        	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d964.3529305463612!2d-0.2404529577494383!3d51.601004889865614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x8ba81e4d0674e68c!2sTrinity+Church!5e0!3m2!1sen!2suk!4v1464089410065" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2484.3404331498937!2d7.006185951076431!3d51.488619979532054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b8e816ca3a2e43%3A0x6efb29e4040ce907!2sGrace+Mission+International+Str.+289%2C+45326+Essen%2C+Germany!5e0!3m2!1sen!2sng!4v1524361406802" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 			</div>
-			<a href="https://maps.google.com/maps?ll=51.601409,-0.238894&z=17&t=m&hl=en-US&gl=GB&mapclient=embed&cid=10063326683529012876" target="_blank">View Map</a>
+			<a href="https://maps.google.com/maps?ll=51.48862,7.006186&z=17&t=m&hl=en-US&gl=GB&mapclient=embed&cid=10063326683529012876" target="_blank">View Map</a>
 	</div>		
 	
 
 
 	<div class="footer-form">
 		<h3>Get In Touch</h3>
-			<p>Phone<br/>
-			020 8205 9271</p>
-				<div id="wufoo-m8uqtek0nknqn2">
-					Get in touch with our <a href="https://trinitywufoo.wufoo.com/forms/m8uqtek0nknqn2">online form</a>.
-				</div>
-			<script type="text/javascript">var m8uqtek0nknqn2;(function(d, t) {
-				var s = d.createElement(t), options = {
-				'userName':'trinitywufoo',
-				'formHash':'m8uqtek0nknqn2',
-				'autoResize':true,
-				'height':'497',
-				'async':true,
-				'host':'wufoo.com',
-				'header':'show',
-				'ssl':false};
-				s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
-				s.onload = s.onreadystatechange = function() {
-				var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-				try { m8uqtek0nknqn2 = new WufooForm();m8uqtek0nknqn2.initialize(options);m8uqtek0nknqn2.display(); } catch (e) 			{}};
-				var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
-				})(document, 'script');
-			</script>
+			<p>Phone<br/>0172-881-9023, 0174103596</p>
+
+
+
+<form action="https://docs.google.com/forms/d/e/1FAIpQLSea50qdXRT0WvSAtt4l9DXjHBi9dwysboT136K4FSzvVVa2CA/formResponse"
+      target="_blank"
+      id="bootstrapForm"
+      method="POST">
+    <!-- Field type: "short" id: "1633920210" -->
+    <fieldset>
+        <legend for="1633920210">Name</legend>
+        <div class="form-group">
+            <input id="2005620554" type="text" name="entry.2005620554" class="form-control" required>
+        </div>
+    </fieldset>
+
+
+    <!-- Field type: "short" id: "227649005" -->
+    <fieldset>
+        <legend for="227649005">Email</legend>
+        <div class="form-group">
+            <input id="1045781291" type="text" name="entry.1045781291" class="form-control" required>
+        </div>
+    </fieldset>
+
+
+    <!-- Field type: "short" id: "1770822543" -->
+    <fieldset>
+        <legend for="1770822543">Phone number</legend>
+        <div class="form-group">
+            <input id="1166974658" type="text" name="entry.1166974658" class="form-control" >
+        </div>
+    </fieldset>
+
+
+    <!-- Field type: "paragraph" id: "1846923513" -->
+    <fieldset>
+        <legend for="1846923513">Your Message</legend>
+        <div class="form-group">
+            <textarea id="839337160" name="entry.839337160" class="form-control" required></textarea>
+        </div>
+    </fieldset>
+
+    <input type="hidden" name="fvv" value="1">
+    <input type="hidden" name="fbzx" value="6175700945717290974">
+    <input type="hidden" name="pageHistory" value="0">	
+    <input class="block-link form-control" type="submit" value="Submit" style="margin:10px 20px; width:265px">
+</form>
+				
+
 		</div>
 	</div>
 
@@ -371,34 +410,34 @@ $(window).resize(function(){
 	<div class="spacer"></div>
 	<div class="container" style="margin-top:20px;">
 		<div class="footer-address"></div>	
-		<div class="footer-form" style="text-align:right; font-size:60%">website made by <a href="http://www.tecmie.com" style="color:white"><img src="https://crm.tecmie.com/uploads/company/logo.png"></a></div>
+		<div class="footer-form" style="text-align:right; font-size:60%">website made by <a href="http://www.tecmie.com" style="color:white"><img src="http://localhost/g-mission/images2016/copyright.png"></a></div>
 	</div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js" integrity="sha256-2Pjr1OlpZMY6qesJM68t2v39t+lMLvxwpa8QlRjJroA=" crossorigin="anonymous"></script> -->
 <script>
 $(document).ready(function(){
     $("#burger").click(function(){
-        $(".nav ul").css("height","auto");
-        $(".nav ul").css("padding","50px 0");
+        $(".nav ul").css("height","100vh");
+        $(".nav ul").css("padding","100px 0");
     });
     $("#nav-close").click(function(){
         $(".nav ul").removeAttr("style");
     });
 });
-</script>
-<script>
-$(document).ready(function(){
-    $("#archive-link2022").click(function(){$("#archive2022").toggleClass("archive-open");});
-    $("#archive-link2021").click(function(){$("#archive2021").toggleClass("archive-open");});
-    $("#archive-link2020").click(function(){$("#archive2020").toggleClass("archive-open");});
-    $("#archive-link2019").click(function(){$("#archive2019").toggleClass("archive-open");});
-    $("#archive-link2018").click(function(){$("#archive2018").toggleClass("archive-open");});
-    $("#archive-link2017").click(function(){$("#archive2017").toggleClass("archive-open");});
-    $("#archive-link2016").click(function(){$("#archive2016").toggleClass("archive-open");});
-    $("#archive-link2015").click(function(){$("#archive2015").toggleClass("archive-open");});
-    $("#archive-link2014").click(function(){$("#archive2014").toggleClass("archive-open");});
-    $("#archive-link2013").click(function(){$("#archive2013").toggleClass("archive-open");});
-});
+
+// $('#bootstrapForm').submit(function (event) {
+//     event.preventDefault()
+//     var extraData = {}
+//     $('#bootstrapForm').ajaxSubmit({
+//         data: extraData,
+//         dataType: 'jsonp',  // This won't really work. It's just to use a GET instead of a POST to allow cookies from different domain.
+//         error: function () {
+//             alert('Form Submitted. Thanks.')
+//             window.location = 'http://localhost/g-mission/'
+//         }
+//     })
+// })
 </script>
 
 
@@ -416,7 +455,7 @@ $(document).ready(function(){
                     zoom: 15,
 
                     // The latitude and longitude to center the map (always required)
-                    center: new google.maps.LatLng(51.6012, -0.2388), // New York
+                    center: new google.maps.LatLng(51.48862,7.006186), // Essen
 
                     // How you would like to style the map. 
                     // This is where you would paste any style found on Snazzy Maps.
@@ -432,7 +471,7 @@ $(document).ready(function(){
 
                 // Let's also add a marker while we're at it
                 var marker = new google.maps.Marker({
-                    position: new google.maps.LatLng(51.6012, -0.2388),
+                    position: new google.maps.LatLng(51.48862,7.006186),
                     map: map,
                     title: 'Grace Mission International'
                 });
